--- a/gymtracker/package.json
+++ b/gymtracker/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.1.1",
     "chart.js": "^3.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
